# vsomeipSpeed

./: CMakeLists.txt  README.md  client1.json  client2.cpp  ns.sh  server.json
configs/: client2.json
include/: vsomeip_ids.hpp
src/: client1.cpp  server.cpp
